<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:orientation="vertical" >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tittleAddProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tittleAddProfile"
        android:textColor="#000000"
        android:textSize="20sp"        
        android:textStyle="bold"
        android:drawableLeft="@drawable/add_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f9ffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileName"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/profileNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f3ffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dobET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/dobET" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f9ffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/heightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f3ffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/weightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f9ffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bloodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodGroup"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/bloodGroupET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>



    <Button
        android:id="@+id/profile_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:background="#cc0000"
        android:text="@string/profile_save" />
    </LinearLayout>
</ScrollView>
