<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8sp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tittleSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/profile"
            android:gravity="center"
            android:text="@string/tittleSaveProfile"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f9ffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileName"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileNameVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#cc0000" 
                android:paddingLeft="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f3ffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dobVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="10sp" 
                android:textColor="#cc0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f9ffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/heightVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" 
                android:paddingLeft="10sp"
                android:textColor="#cc0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f3ffff"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/weightVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="10sp"
                android:textColor="#cc0000"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f9ffff"
            android:orientation="horizontal"
            android:paddingBottom="15sp" >

            <TextView
                android:id="@+id/bloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloodGroup"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bloodGroupVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="10sp" 
                android:textColor="#cc0000" />
        </LinearLayout>

        
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f9ffff"
            android:orientation="horizontal" >
        <Button
            android:id="@+id/go_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="#000000"
            android:text="@string/go_diet"
            android:textStyle="italic" 
            android:drawableTop="@drawable/diet"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/go_vaccination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="#000000"
            android:text="@string/go_vaccination"
            android:textStyle="italic"
            android:drawableTop="@drawable/vaccination"
            android:layout_marginLeft="10sp" />
        </LinearLayout>
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f9ffff"
            android:orientation="horizontal" >
        <Button
            android:id="@+id/go_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="#000000"
            android:text="@string/go_doctor"
            android:textStyle="italic" 
            android:drawableTop="@drawable/doc"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/go_prescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="#000000"
            android:text="@string/go_prescription"
            android:textStyle="italic" 
            android:drawableTop="@drawable/prescription"
            android:layout_marginLeft="10sp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>